docker_auth/kubernetes/ecr-docker-auth.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecr-docker-auth
  namespace: sage
  labels:
    app: ecr-docker-auth
spec:
  selector:
    k8s-app: ecr-docker-auth
  type: ClusterIP
  ports:
  - name: ecr-docker-auth
    port: 80
    protocol: TCP
    targetPort: 5001
